--- a/src/main/webapp/CSS/Style.css
+++ b/src/main/webapp/CSS/Style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 body {
 	background-color: blue;
-	font-weight: 14px;
+	font-weight: bold;
 	font-family: Arial ;
+	color:red;
 }
